Updated Classes and Endpoints